--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+    crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" 
+    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Todo List</title>
 </head>
 <body>
-    <h1>Hello webpack!</h1>
+
+    <section class="section">
+        <div class="section-head">
+            <h1>Today's To Do</h1>
+            <button>
+                <i class="fas fa-sync"></i>
+            </button>
+        </div>
+        <div class="input-div">
+            <input placeholder="Add to your list...">
+            <button>
+                <i class="fas fa-plus"></i>
+            </button>
+        </div>
+        <ul class="list-cont">
+            <li id="0" contenteditable="true">
+                <button class="check-button" id="0">
+                    <i class="far fa-square"></i>
+                </button>
+                <label id="0">Start the capston project</label>
+                <button id="0">
+                    <i class="fas fa-ellipsis-v"></i>
+                </button>
+            </li>
+            <li id="1" contenteditable="false" class="checked">
+                <button class="check-button" id="1">
+                    <i class="fas fa-check"></i>
+                </button>
+                <label id="1">Solve html exercice</label>
+                <button id="1">
+                    <i class="fas fa-ellipsis-v"></i>
+                </button>
+            </li>
+            <li id="1" contenteditable="false" class="checked">
+                <button class="check-button" id="2">
+                    <i class="fas fa-check"></i>
+                </button>
+                <label id="2">Solve html exercice</label>
+                <button id="2">
+                    <i class="fas fa-ellipsis-v"></i>
+                </button>
+            </li>
+        </ul>
+        <div class="clean-section">
+            <h2>Clear all completed</h2>
+        </div>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
+    crossorigin="anonymous"></script>
 </body>
 </html>
