--- a/src/index.html
+++ b/src/index.html
@@ -18,35 +18,18 @@
     <section class="section">
         <div class="section-head">
             <h1>Today's To Do</h1>
-            <button>
+            <button type="reset">
                 <i class="fas fa-sync"></i>
             </button>
         </div>
         <div class="input-div">
             <input placeholder="Add to your list...">
-            <button>
+            <button type="submit">
                 <i class="fas fa-plus"></i>
             </button>
         </div>
         <ul class="list-cont">
-            <li id="1" contenteditable="false" class="checked">
-                <button class="check-button" id="1">
-                    <i class="fas fa-check"></i>
-                </button>
-                <label id="1">Solve html exercice</label>
-                <button id="1">
-                    <i class="fas fa-ellipsis-v"></i>
-                </button>
-            </li>
-            <li id="0" contenteditable="true">
-                <button class="check-button" id="0">
-                    <i class="far fa-square"></i>
-                </button>
-                <label id="0">Start the capston project</label>
-                <button id="0">
-                    <i class="fas fa-ellipsis-v"></i>
-                </button>
-            </li>
+            
         </ul>
         <div class="clean-section">
             <h2>Clear all completed</h2>
