Create add task function

--- a/src/index.html
+++ b/src/index.html
@@ -18,13 +18,13 @@
     <section class="section">
         <div class="section-head">
             <h1>Today's To Do</h1>
-            <button type="reset">
+            <button type="reset" >
                 <i class="fas fa-sync"></i>
             </button>
         </div>
         <div class="input-div">
-            <input placeholder="Add to your list...">
-            <button type="submit">
+            <input id="input_text" placeholder="Add to your list...">
+            <button type="submit" id="addTask">
                 <i class="fas fa-plus"></i>
             </button>
         </div>
