Add removeAll & removedone function

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <section class="section">
         <div class="section-head">
             <h1>Today's To Do</h1>
-            <button type="reset" >
+            <button type="reset" id="resetAll" >
                 <i class="fas fa-sync"></i>
             </button>
         </div>
@@ -32,7 +32,7 @@
             
         </ul>
         <div class="clean-section">
-            <h2>Clear all completed</h2>
+            <h2 id="clearDone">Clear all completed</h2>
         </div>
     </section>
 
